<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:androidplot="http://schemas.android.com/apk/lib/com.example.applicationname"
    androidplot:androidPlot.domainLabel="Domain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cl.felipebarriga.android.smartbandlogger.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/main_status_text"
                    android:id="@+id/textView"
                    android:paddingRight="100dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/main_status_lbl"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/main_data_rate_text"
                    android:id="@+id/textView5"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/main_data_rate_lbl"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/main_log_filename_text"
                    android:id="@+id/textView3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/main_filename_lbl"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/main_records_text"
                    android:id="@+id/textView9"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/main_records_lbl"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/main_elapsed_time_text"
                    android:id="@+id/textView11"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/main_elapsed_time_lbl"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/main_log_size_text"
                    android:id="@+id/textView7"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/main_log_size_lbl"
                    />
            </TableRow>
        </TableLayout>

        <com.androidplot.xy.XYPlot
            android:id="@+id/main_history_plot"
            androidplot:androidPlot.backgroundPaint.color="#000000"
            androidplot:androidPlot.borderPaint.color="#000000"
            androidplot:androidPlot.domainLabel=""
            androidplot:androidPlot.domainLabelWidget.labelPaint.textSize="@dimen/domain_label_font_size"
            androidplot:androidPlot.graphWidget.backgroundPaint.color="#000000"
            androidplot:androidPlot.graphWidget.domainLabelPaint.textSize="@dimen/domain_tick_label_font_size"
            androidplot:androidPlot.graphWidget.domainOriginLabelPaint.textSize="@dimen/domain_tick_label_font_size"
            androidplot:androidPlot.graphWidget.gridBackgroundPaint.color="#000000"
            androidplot:androidPlot.graphWidget.marginBottom="15dp"
            androidplot:androidPlot.graphWidget.marginLeft="5dp"
            androidplot:androidPlot.graphWidget.marginRight="5dp"
            androidplot:androidPlot.graphWidget.marginTop="15dp"
            androidplot:androidPlot.graphWidget.rangeLabelPaint.textSize="@dimen/range_tick_label_font_size"
            androidplot:androidPlot.graphWidget.rangeOriginLabelPaint.textSize="@dimen/range_tick_label_font_size"
            androidplot:androidPlot.legendWidget.heightMetric.value="25dp"
            androidplot:androidPlot.legendWidget.iconSizeMetrics.heightMetric.value="15dp"
            androidplot:androidPlot.legendWidget.iconSizeMetrics.widthMetric.value="15dp"
            androidplot:androidPlot.legendWidget.textPaint.textSize="@dimen/legend_text_font_size"
            androidplot:androidPlot.rangeLabel="m/s²"
            androidplot:androidPlot.rangeLabelWidget.labelPaint.textSize="@dimen/range_label_font_size"
            androidplot:androidPlot.title=""
            androidplot:androidPlot.titleWidget.labelPaint.textSize="@dimen/title_font_size"
            androidplot:androidplot.renderMode="use_background_thread"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            />

    </LinearLayout>
</RelativeLayout>
